# osm2shp

./: .gitignore  CMakeLists.txt  README.md  osm2shp.cc
CMakeModules/: FindOSMpbf.cmake  FindProtobuf.cmake  FindSQLite3.cmake  FindShapelib.cmake
build.x64/: .gitignore  BUILDME.md  build-me.bat  debug.txt  fi.bat  run-exe.bat  updexe.bat
osm/: handler.cc  handler.hpp  point_database.cc  shapefile.cc  shapefile.hpp
